Add responsive classes to Footer section.

--- a/index.html
+++ b/index.html
@@ -399,17 +399,17 @@
 
 			<div class="relative container mx-auto px-6 lg:px-0">
 				<!-- top footer -->
-				<div class="flex justify-between">
+				<div class="lg:flex justify-between space-y-12 lg:space-y-0">
 					<!-- newsletter -->
 					<div class="flex flex-col justify-center">
-						<h4 class="mb-4 font-bold text-5xl text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-purple-500">Get updates on this course!</h4>
+						<h4 class="mb-4 font-bold text-2xl lg:text-5xl text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-purple-500">Get updates on this course!</h4>
 						<form action="" method="POST" class="flex">
 							<input type="email" name="email" placeholder="super@secret.com" class="w-full p-3 rounded-l outline-none border-2 border-r-0 border-gray-400 focus:border-purple-400 placeholder-gray-300">
 							<button class="p-3 bg-purple-400 text-purple-100 rounded-r">Submit</button>
 						</form>
 					</div>
 					<!-- links -->
-					<div class="text-right flex space-x-10">
+					<div class="text-center lg:text-right md:flex md:justify-center md:space-x-8 space-y-8 md:space-y-0">
 						<div class="space-y-2">
 							<p class="mb-3 font-bold text-gray-400 uppercase tracking-widest">Company</p>
 							<a href="" class="block hover:text-gray-900 hover:underline">About</a>
@@ -435,7 +435,7 @@
 				</div>
 
 				<!-- bottom footer -->
-				<div class="pt-4 mt-16 flex justify-between border-t border-gray-200 text-sm">
+				<div class="pt-4 mt-16 md:flex justify-between border-t border-gray-200 text-sm text-center md:text-left space-y-4 md:space-y-0">
 					<!-- copyright -->
 					<div>Copyright &copy; 2021 - 3755</div>
 					<!-- links -->
