--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<!-- header/navigation section -->
 			<!-- ========================= -->
 			<div class="relative text-gray-600">
-				<div class="container mx-auto flex justify-between px-6 lg:px-0 py-6">
+				<div class="container mx-auto flex justify-between px-8 py-6">
 					<!-- left header section -->
 					<div class="flex items-center space-x-4">
 						<a href="#" class="font-bold text-2xl text-teal-900">Beginner Tailwind</a>
@@ -53,7 +53,7 @@
 				<!-- purple bar to spice up the section transition -->
 				<div class="absolute bottom-0 inset-x-0 h-64 bg-purple-700"></div>
 
-				<div class="container mx-auto px-6 lg:px-0 py-24 text-center">
+				<div class="container mx-auto px-8 py-24 text-center">
 					<!-- heading -->
 					<h1 class="mb-4 text-5xl lg:text-6xl font-extrabold">
 						<span class="text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-teal-500">Beginner</span>
@@ -87,7 +87,7 @@
 			<!-- gray bar to spice up the section transition -->
 			<div class="absolute bottom-0 inset-x-0 h-64 bg-gray-300"></div>
 
-			<div class="relative container mx-auto px-6 lg:px-0">
+			<div class="relative container mx-auto px-8">
 				<h2 class="mb-10 text-4xl lg:text-6xl font-bold text-purple-100">Writing CSS is tough stuff!</h2>
 				<div class="lg:flex lg:space-x-16 space-y-8 lg:space-y-0">
 					<!-- left col -->
@@ -115,7 +115,7 @@
 		<!-- about section -->
 		<!-- ========================= -->
 		<div class="lg:pt-12 pb-24 bg-gray-300 lg:text-center">
-			<div class="container mx-auto px-6 lg:px-0">
+			<div class="container mx-auto px-8">
 				<h2 class="mb-3 text-3xl lg:text-6xl font-bold text-teal-900">Some Tailwind Videos I've Done</h2>
 				<p class="mb-20 lg:text-xl leading-loose">Hey there! My name is <a href="https://twitter.com/chrisoncode" class="text-blue-500 hover:underline">Chris Sev</a> and I founded a web dev tutorial site Scotch.io. We were able to grow to 4M monthly pageviews and $300,000 yearly revenue. Scotch.io was acquired byDigitalOcean in November 2019. Nowadays I'm in search of the best ways to develop and design a business. Hope you enjoy this course and my other one MakeReactApps.com.</p>
 
@@ -137,7 +137,7 @@
 		<!-- what you'll learn section -->
 		<!-- ========================= -->
 		<div class="py-32 bg-gray-200 text-gray-700">
-			<div class="container mx-auto px-6 lg:px-0">
+			<div class="container mx-auto px-8">
 				<!-- header -->
 				<div class="relative">
 					<h2 class="mb-24 text-4xl lg:text-6xl text-center font-bold text-purple-900">What You'll Learn In This Course</h2>
@@ -242,7 +242,7 @@
 		<!-- what you'll build section -->
 		<!-- ========================= -->
 		<div class="py-24 bg-gray-300 text-gray-600">
-			<div class="container mx-auto px-6 lg:px-0">
+			<div class="container mx-auto px-8">
 				<div class="mb-8 text-center">
 					<h2 class="mb-2 text-5xl text-gray-800">What we'll build in this course</h2>
 					<p class="text-lg text-gray-700">These components are things you'll have to create in every project.</p>
@@ -308,7 +308,7 @@
 			<!-- gray box for the top of the section -->
 			<div class="absolute top-0 inset-x-0 h-48 bg-gray-300"></div>
 
-			<div class="container mx-auto px-6 lg:px-0 flex flex-col lg:flex-row items-center lg:space-x-8 space-y-4 lg:space-y-0">
+			<div class="container mx-auto px-8 flex flex-col lg:flex-row items-center lg:space-x-8 space-y-4 lg:space-y-0">
 				<!-- left box -->
 				<div class="order-2 lg:order-1 lg:w-1/3 pt-12 text-center lg:text-right space-y-2 text-xl">
 					<p><strong class="font-bold text-white">75 videos</strong> at a smooth pace</p>
@@ -343,7 +343,7 @@
 		<!-- faq section -->
 		<!-- ========================= -->
 		<div class="py-32 bg-gray-800 text-gray-400">
-			<div class="container mx-auto px-6 lg:px-0">
+			<div class="container mx-auto px-8">
 				<h2 class="mb-12 text-3xl text-center font-bold">Frequently Asked Questions</h2>
 				<!-- grid of questions -->
 				<div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
@@ -397,7 +397,7 @@
 				<div class="absolute mt-12 ml-6 w-24 h-24 rounded-full bg-gradient-to-br from-red-100 to-red-200 opacity-50"></div>
 			</div>
 
-			<div class="relative container mx-auto px-6 lg:px-0">
+			<div class="relative container mx-auto px-8">
 				<!-- top footer -->
 				<div class="lg:flex justify-between space-y-12 lg:space-y-0">
 					<!-- newsletter -->
