--- a/index.html
+++ b/index.html
@@ -340,6 +340,45 @@
 		</div>
 
 		<!-- ========================= -->
+		<!-- modules/videos section -->
+		<!-- ========================= -->
+		<div class="relative py-32 bg-gradient-to-b from-gray-700 to-gray-800">
+			<div class="container mx-auto px-10">
+				<div class="mb-10 mx-auto space-y-4 text-center">
+					<h2 class="font-bold text-4xl lg:text-6xl text-transparent bg-clip-text bg-gradient-to-r from-white to-purple-200">The Modules/Videos</h2>
+					<p class="text-2xl text-gray-100">9.25 hours of Tailwind learning in 19 modules/75 videos.</p>
+				</div>
+				 <div class="max-w-3xl mx-auto text-gray-400">
+					 <div class="p-6 bg-gray-800 flex justify-between items-center rounded-t-lg">
+						 <h4 class="text-3xl">Getting Started</h4>
+						 <div class="flex space-x-8 text-center text-xl font-bold">
+							 <div>6 <span class="block text-sm font-normal">videos</span></div>
+							 <div>33 <span class="block text-sm font-normal">minutes</span></div>
+						 </div>
+					 </div>
+				 </div>
+				 <div class="max-w-3xl mx-auto text-gray-400">
+					 <div class="p-6 bg-gray-800 bg-opacity-75 flex justify-between items-center">
+						 <h4 class="text-3xl">Main Concepts</h4>
+						 <div class="flex space-x-8 text-center text-xl font-bold">
+							 <div>11 <span class="block text-sm font-normal">videos</span></div>
+							 <div>67 <span class="block text-sm font-normal">minutes</span></div>
+						 </div>
+					 </div>
+				 </div>
+				 <div class="max-w-3xl mx-auto text-gray-400">
+					 <div class="p-6 bg-gray-800 flex justify-between items-center rounded-b-lg">
+						 <h4 class="text-3xl">Layout</h4>
+						 <div class="flex space-x-8 text-center text-xl font-bold">
+							 <div>4 <span class="block text-sm font-normal">videos</span></div>
+							 <div>37 <span class="block text-sm font-normal">minutes</span></div>
+						 </div>
+					 </div>
+				 </div>
+			</div>
+		</div>
+
+		<!-- ========================= -->
 		<!-- faq section -->
 		<!-- ========================= -->
 		<div class="py-32 bg-gray-800 text-gray-400">
